--- a/weather-app/src/App.css
+++ b/weather-app/src/App.css
@@ -5,14 +5,17 @@ body{
   background-color:#282c34;
 }
 
-.ali{
+/* .ali{
   background-color: #6151C3;
-}
-
-/* .forecast{
-  display: flex;
-  flex-direction: row;
-  justify-content:right
 } */
 
 
+
+.temp{
+  margin-top: 120px;
+}
+
+
+.details{
+  margin-top: 90px;
+}
