--- a/weather-app/src/App.css
+++ b/weather-app/src/App.css
@@ -12,10 +12,15 @@ body{
 
 
 .temp{
-  margin-top: 120px;
+  margin-top: 150px;
 }
 
 
 .details{
-  margin-top: 90px;
+  margin-top: 130px;
+}
+
+.rows{
+  display: flex;
+  justify-content: flex-start;
 }
